--- a/document/book.bib
+++ b/document/book.bib
@@ -1951,9 +1951,9 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/QPU86IX8/Lane and Chang - 2018 - Chess knowledge predicts chess memory even after c.pdf}
 }
 
-@misc{wrightInvestigatingAuralCase2016,
+@phdthesis{wrightInvestigatingAuralCase2016,
   title = {Investigating {{Aural}}: {{A Case Study}} of Its {{Relationship}} to {{Degree Success}} and Its {{Understanding}} by {{University Music Students}}},
-  publisher = {{University of Hull}},
+  school = {University of Hull},
   author = {Wright, Colin Richard},
   year = {2016}
 }
