--- a/document/latex/after_body.tex
+++ b/document/latex/after_body.tex
@@ -1,16 +1,16 @@
 \backmatter
-\chapter{Appendix A: Permissions}
+\chapter{Appendix A: Karpinski Permissions}
 
 \thispagestyle{empty}
 \begin{center}
-\includegraphics{karpinskipermission.png}
+\includegraphics{img/karpinskipermission.png}
 \end{center}
 
-\chapter{Appendix B: Permissions}
+\chapter{Appendix B: Cowan Permissions}
 
 \thispagestyle{empty}
 \begin{center}
-\includegraphics{cownpermission.png}
+\includegraphics{img/cownpermission.png}
 \end{center}
 
 \chapter{Vita}
