--- a/document/latex/before_body.tex
+++ b/document/latex/before_body.tex
@@ -1,7 +1,8 @@
-\newpage\thispagestyle{empty}
-{\centering
+%\newpage\thispagestyle{empty}
+\begin{center}
   MODELING MELODIC DICTATION\\
-}
+\end{center}
+
 \begin{center}
 A Dissertation
 
@@ -17,13 +18,13 @@ in
 The School of Music
 \end{center}
 
-{\centering
+\begin{center}
 by\\
 David John Baker\\
 B.M., Baldwin Wallace University, 2012\\
 MSc., Goldsmiths, University of London, 2014\\
 August 2019\\
-}
+\end{center}
 
 
 \setlength{\abovedisplayskip}{-5pt}
@@ -33,7 +34,9 @@ August 2019\\
 %\cleardoublepage\newpage\thispagestyle{empty}\null
 
 % Copyright
-\newpage\thispagestyle{empty}
+\newpage
+
+\thispagestyle{empty}
 
 © 2019 copyright
 
@@ -41,17 +44,18 @@ David John Baker
 
 All rights reserved
 
-%%%%%\cleardoublepage\newpage
+\cleardoublepage\newpage %%% KILL
 \newpage
 
 % Dedication
-\thispagestyle{empty}
-\chapter{}
+%% REMOVE DOUBLE COMMENTS FOR PRINTING
+%%\thispagestyle{empty}
+%%\chapter{Dedication}
 
-This dissertation is dedicated to my parents.
-Thank you for valuing education.
-Thank you for fostering my growth in every way possible.
-As a result, you've opened my eyes to the world.
+%%This dissertation is dedicated to my parents.
+%%Thank you for valuing education.
+%%Thank you for fostering my growth in every way possible.
+%%As a result, you've opened my eyes to the world.
 
 %\setlength{\abovedisplayskip}{-5pt}
 %\setlength{\abovedisplayshortskip}{-5pt}
